@@ -11,6 +11,10 @@ General
 Package org.springframework.osgi.context
 * added reporting of Errors raised during delegated refresh in AbstractDelegatedExecutionApplicationContext
 
+Package org.springframework.osgi.extender
+* fixed bug related to enabling Spring-DM annotation depedency processing
+* improved annotation injection processing
+
 Package org.springframework.osgi.service
 * changed the proxying classloader strategy to address package dependency visibility
 * fixed usage of incorrect class loader for imported services with client thread context class loader management
